--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,61 @@
-.venv/
-__pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.pyw
-*.pyz
 .env
+.env.local
+.env.example
+*.env
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
+
+# Virtual environment
+.venv/
+venv/
+env/
+ENV/
+
+# IDE files
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# macOS
+.DS_Store
+.AppleDouble
+.LSOverride
+
+# Generated files
+exam_notes.json
+exam_notes.md
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+.cache/
+
+# OpenAI assistant info
+.assistant
+.last_thread
+assistant_info.json
+EOF
